test/conformance/chainsaw/lease/admission-controller/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: admission-controller-lease
spec:
  concurrent: true
  steps:
  - try:
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            namespace: kyverno
            labels:
              app.kubernetes.io/component: admission-controller
              app.kubernetes.io/instance: kyverno
              app.kubernetes.io/part-of: kyverno
          status:
            (containerStatuses[?name == 'kyverno']):
            - ready: true
              restartCount: 0
    - patch:
        resource:
          apiVersion: coordination.k8s.io/v1
          kind: Lease
          metadata:
            name: kyverno
            namespace: kyverno
          spec:
            holderIdentity: foo
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            namespace: kyverno
            labels:
              app.kubernetes.io/component: admission-controller
              app.kubernetes.io/instance: kyverno
              app.kubernetes.io/part-of: kyverno
          status:
            (containerStatuses[?name == 'kyverno']):
            - ready: true
              restartCount: 1
